# lenv

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
src/: cli.py  utils.py
src/commands/: delete.py  ls.py  save.py  use.py
src/completion/: envm_complete.bash  envm_complete.fish  envm_complete.zsh
