[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "envm"
version = "0.1.2"
description = "Command to manage environments variables, the idea is because everyday I have to work with .env files with different projects and environments like dev, staging and local."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.0",
]
authors = [
    { name = "Emmanuel Octavio", email = "emmanueloctaviomc@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/emmanueloctavi0/envm"
Issues = "https://github.com/emmanueloctavi0/envm/issues"

[project.scripts]
envm = "main:envm"

[tool.hatch.build.targets.wheel]
packages = ["."]
